# ChessEngine

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/eval/: eval.cpp
src/core/game/board/: board.cpp  board.hpp
src/core/game/move/: move.hpp
src/core/game/movegen/: movegen.cpp  movegen.hpp
src/core/knowledge/: knowledge.cpp
src/core/search/: search.cpp
src/engine/: engine.cpp  engine.hpp
src/uci/: uci.cpp  uci.hpp
src/util/: logger.hpp  util.cpp  util.hpp  zobrist.cpp  zobrist.hpp
